# model-deployer

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml
blueprints/example/: Dockerfile  blueprint.yaml  service.py  smoke.sh
blueprints/example/model/: __init__.py  infer.py  model.py  train_tiny_model.py
blueprints/example/service/: schemas.py
blueprints/pai-example/: Dockerfile  blueprint.yaml  eas-service.json  pai-service.json  requirements.txt  service.py
blueprints/pai-example/model/: model.py
blueprints/pai-example/service/: app.py
cmd/controlplane/: main.go
docs/: blueprint-spec.md  glow_prompt.md  mcp-tools.md  openapi.yaml
docs/plans/: 2026-03-11-blueprint-driven-deployment-design.md  2026-03-11-blueprint-driven-deployment-implementation-plan.md  2026-03-11-model-deployment-standardization-design.md  2026-03-11-model-deployment-standardization-implementation-plan.md  2026-03-12-blueprint-dockerfile-boundary-design.md  2026-03-12-blueprint-dockerfile-boundary-implementation-plan.md
internal/domain/spec/: spec.go  validate.go  validate_test.go
internal/http/: router.go  router_test.go
internal/http/handlers/: debug.go  deployments.go  handlers_test.go  ops.go
internal/mcp/: server.go  tools.go  tools_test.go
internal/provider/: provider.go
internal/provider/eas/: adapter.go  adapter_test.go
mdp_cli/: __init__.py  blueprint.py  codes.py  main.py  pipeline.py  providers.py
scripts/: smoke_cli.sh  smoke_eas.sh
tests/: test_blueprint.py  test_examples.py  test_pipeline.py  test_providers.py
(+13 files in other folders)
